tests/compile_fail/configure_on_trait.rs
#[disponent::configure(inherent)]
trait NotAnEnum {
    fn method(&self);
}

fn main() {}
